--- a/rgveda.css
+++ b/rgveda.css
@@ -90,11 +90,11 @@ body > #body {
 }
 
 a:link {
-color: #5a8261;
+color: #df514c;
 }
 
 a:visited {
-color: #5a8261;
+color: #df514c;
 }
 
 a:hover {
